# AHO

./: .gitignore  AHO.sln  CMakeLists.txt  LICENSE.txt
AHO/: AHO.vcxproj  AHO.vcxproj.filters  CMakeLists.txt  Main.cpp
AHO/shaders/: const_triangle2.vert.spv
AHO/shaders/raw/: 3Dnormal.vert  const_triangle2.vert  input.vert  red.frag  texture.vert
AHOLi/: AHOConfig.cmake.in  AHOLi.vcxproj  AHOLi.vcxproj.filters  CMakeLists.txt  framework.h  init_aholi.cmake
AHOLi/AHO/: Drawer.cpp  Drawer.h  Engine.cpp  Engine.hpp  Window.cpp  Window.h  concepts.h  const_values.hpp  define.h
AHOLi/AHO/built-in-resource/shaders/: 2dtriangle_single_color.vert.spv  3dtriangle_single_color.vert.spv  all-types.vert.spv  vd2p_fc_umpv.vert.spv  vd2ptc_ftc_umpv.vert.spv
AHOLi/AHO/built-in-resource/shaders/raw/: 2dint_triangle_single_color.vert  2dtriangle_single_color.vert  3dtriangle_single_color.vert  vd2p_fc_umpv.vert  vd2ptc_ftc_umpv.vert
AHOLi/AHO/core/: Line.h  Point.h  Polygon.h  Triangle.h  Vector.h  collision.h  color.h  index.h  ov.h
AHOLi/AHO/core/math/: Mat.h  angle.h  coordinate.h
AHOLi/AHO/drawer/: StandardDrawer.h
AHOLi/AHO/engine/: StandardEngine.cpp  StandardEngine.h
AHOLi/AHO/include/AHO/: aho.hpp  concepts.hpp  define.hpp  drawer.hpp  engine.hpp  window.hpp
AHOLi/AHO/include/AHO/core/: collision.hpp  color.hpp  index.hpp  line.hpp  ov.hpp  point.hpp  polygon.hpp  triangle.hpp  vector.hpp
AHOLi/AHO/include/AHO/drawer/: draw_phase.hpp  standard_drawer.hpp
AHOLi/AHO/include/AHO/engine/: graphical_engine.hpp  standard_engine.hpp
AHOLi/AHO/include/AHO/io/: input.hpp  input_manager.hpp  key.hpp  keyboard.hpp  mouse.hpp
AHOLi/AHO/include/AHO/object/: object.hpp
AHOLi/AHO/include/AHO/pipeline/: layouts.hpp  pipeline.hpp
AHOLi/AHO/include/AHO/resource/: audio.hpp  buffer.hpp  image.hpp  object_hitbox.hpp  object_model.hpp
AHOLi/AHO/include/AHO/utils/: polygon.hpp
AHOLi/AHO/io/: Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp  Key.cpp  Key.hpp  KeyBoard.cpp  KeyBoard.hpp  Mouse.cpp  Mouse.hpp
AHOLi/AHO/pipeline/: Pipeline.cpp  Pipeline.h
AHOLi/AHO/src/: drawer.cpp  engine.cpp  window.cpp
AHOLi/AHO/src/drawer/: draw_phase.cpp
AHOLi/AHO/src/engine/: graphical_engine.cpp  standard_engine.cpp
AHOLi/AHO/src/io/: input.cpp  input_manager.cpp  key.cpp  keyboard.cpp  mouse.cpp
AHOLi/AHO/src/pipeline/: layouts.cpp  pipeline.cpp
AHOLi/AHO/src/resource/: buffer.cpp  image.cpp
AHOLi/AHO/utils/: polygon.h
AHOLi/Test/: tests.cpp  tests.h
AHOLi/VSL/: Window.cpp  Window.h  concepts.h  debug.cpp  debug.h  define.h  dimention.h  exceptions.cpp  exceptions.h  window_plugin.cpp  window_plugin.h
AHOLi/VSL/Vulkan/: Vulkan.cpp  Vulkan.h  _pimpls.h  command.cpp  command.h  device.cpp  device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  pv.h  render_pass.cpp  shader.cpp  shader.h  surface.h  swapchain.h  view.h  viewport.cpp  viewport.h
AHOLi/VSL/Vulkan/stages/: color_blend.cpp  depth_stencil.cpp  input_assembly.cpp  input_assembly.h  multisample.h  rasterization.cpp  shader_group.cpp  shader_group.h  vertex_input.cpp
AHOLi/VSL/utils/: ShaderCompiler.h  VSLArray.h
Dev/: Dev.cpp  (+3 more)
Fractal/: AHO.vcxproj  CMakeLists.txt  Main.cpp
Fractal/shaders/: 3Dnormal.vert.spv  const_triangle.vert.spv
Fractal/shaders/raw/: 3Dnormal.vert  const_triangle.vert  fractal.comp
Test/: CMakeLists.txt
VSLi/: CMakeLists.txt  VSLConfig.cmake.in  VSLi.vcxproj  VSLi.vcxproj.filters  pch.cpp
VSLi/VSL/: Type.h  Window.cpp  Window.h  concepts.h  consteval_string.h  debug.cpp  debug.h  defaults.cpp  defaults.hpp  define.h  dimention.h  exceptions.cpp  exceptions.h  format.h  test.h  vsl.h  window_plugin.cpp  window_plugin.h
VSLi/VSL/Vulkan/: Vulkan.cpp  Vulkan.h  _dimention.h  _pimpls.cpp  _pimpls.h  buffer.cpp  buffer.h  buffer_and_image_accessor.h  command.cpp  command.h  descriptor.cpp  descriptor.hpp  descriptor_set_manager.cpp  descriptor_set_manager.h  device.cpp  device.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.hpp  phase.cpp  phase.hpp  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  post_definition.h  pv.h  render_pass.cpp  render_pass.h  sampler.cpp  scissor.cpp  scissor.h  shader.cpp  shader.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  synchronize.cpp  (+5 more)
VSLi/VSL/Vulkan/commands/: bind_graphic_resource.cpp  bind_graphic_resource.hpp  bind_index_buffers.cpp  bind_index_buffers.h  bind_pipe_line.cpp  bind_pipe_line.h  bind_vertex_buffers.cpp  bind_vertex_buffers.h  change_image_barrier.cpp  change_image_barrier.hpp  copy_buffer_to_image.cpp  copy_buffer_to_image.h  copy_image_to_buffer.cpp  copy_image_to_buffer.h  dispatch.cpp  dispatch.hpp  draw.cpp  draw.h  draw_indexed.cpp  draw_indexed.h  pipeline_barrier.cpp  pipeline_barrier.hpp  render_pass_begin.cpp  render_pass_begin.h  render_pass_end.cpp  render_pass_end.h  set_scissor.cpp  set_vieport.cpp  set_viewport.h
VSLi/VSL/Vulkan/stages/: color_blend.cpp  color_blend.h  depth_stencil.cpp  depth_stencil.h  dynamic_state.cpp  dynamic_state.h  input_assembly.cpp  input_assembly.h  multisample.cpp  multisample.h  rasterization.cpp  rasterization.h  resource_binding.cpp  resource_binding.h  shader_group.cpp  shader_group.h  vertex_input.cpp  vertex_input.h
VSLi/VSL/Vulkan/window_plugin/: hook_window_resize.h
VSLi/VSL/include/VSL/: concepts.hpp  consteval_string.hpp  define.hpp  dimension.hpp  exceptions.hpp  format.hpp  test.hpp  type.hpp  vsl.hpp  window.hpp  window_plugin.hpp
VSLi/VSL/src/: exceptions.cpp  window.cpp  window_plugin.cpp
VSLi/VSL/src/utils/: shader_compiler.cpp  spir_reflector.cpp  string.cpp
VSLi/VSL/src/vulkan/: buffer.cpp  command.cpp  descriptor.cpp  descriptor_set_manager.cpp  device.cpp  frame_buffer.cpp  image.cpp  phase.cpp  pipeline.cpp  pipeline_layout.cpp  render_pass.cpp  sampler.cpp  scissor.cpp  shader.cpp  surface.cpp  swapchain.cpp  synchronize.cpp  view.cpp  viewport.cpp  vulkan.cpp
VSLi/VSL/utils/: Flags.h  ShaderCompiler.cpp  ShaderCompiler.h  VSLArray.h  string.cpp  string.h  typed_safe_resource.h
(+89 files in other folders)
